--- a/sample.html
+++ b/sample.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <body>
 	<p> hi this is kumaresan 
-	the content is in master branch </p>
+	the content is in day branch </p>
 </body>
 </html>
